--- a/lefthook.yml
+++ b/lefthook.yml
@@ -7,3 +7,12 @@ pre-commit:
     clippy:
       glob: "**/*.rs"
       run: cargo clippy --all-targets -- -D warnings
+    actionlint:
+      glob: ".github/workflows/*.{yml,yaml}"
+      run: actionlint
+    zizmor:
+      glob: ".github/workflows/*.{yml,yaml}"
+      run: zizmor --persona=auditor .
+    ghalint:
+      glob: ".github/workflows/*.{yml,yaml}"
+      run: ghalint run
