--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -19,18 +19,22 @@ jobs:
     name: Release Please
     timeout-minutes: 5
     runs-on: ubuntu-latest
-    permissions:
-      contents: write # for creating releases
-      pull-requests: write # for creating PRs
-      issues: write # for creating labels
     outputs:
       should-release: ${{ steps.release-please.outputs.release_created }}
       tag: ${{ steps.release-please.outputs.tag_name }}
     steps:
+      - uses: actions/create-github-app-token@29824e69f54612133e76f7eaac726eef6c875baf # v2.2.1
+        id: app-token
+        with:
+          app-id: ${{ secrets.RELEASE_PLEASE_APP_ID }}
+          private-key: ${{ secrets.RELEASE_PLEASE_APP_PRIVATE_KEY }}
+          permission-contents: write
+          permission-pull-requests: write
+          permission-issues: write
       - uses: googleapis/release-please-action@16a9c90856f42705d54a6fda1823352bdc62cf38 # v4.4.0
         id: release-please
         with:
-          token: ${{ github.token }}
+          token: ${{ steps.app-token.outputs.token }}
           config-file: release-please-config.json
           manifest-file: .release-please-manifest.json
 
